[tool.poetry]
name = "walkthrough-1"
version = "0.1.0"
description = ""
authors = ["Eric Lara <eric.lara@axa.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.8.1"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "walkthrough_1.__init__:start"
